syntax = "proto3";

package  region;

service  Region {
   rpc   Region(Request)returns(Response){}
   rpc   Send(messageRequest)returns(messageResponse){}
   rpc   Detail(RegionDetail)returns(Response){}
}

message Request {
    string version =1; //1.0
    string appId =2 ;
    string appSecret =3 ;
    int32  type   =4 ;//1-省 2-是 3-区
    int32  parentId  =5 ;//省市的id
    int32  page  =6;
    int32  num  =7;

}

message Response{
   int32 api_code =1 ;
   string data  =2 ;
   string api_msg  =3 ;
}


message  messageRequest{
      string version =1; //1.0
      string appId =2 ;
      string appSecret =3 ;
      int32  type   =4 ;// 1-云片 2-云之讯
      string mobile =5;
      string text =6;
}

message  messageResponse{
    int32 api_code =1;
    string data =2;
    string api_msg  =3 ;
}

message RegionDetail{
    string version =1; //1.0
    string appId =2 ;
    string appSecret =3 ;
    int32  regionId =4;
}






